--- a/gmall-parent/pom.xml
+++ b/gmall-parent/pom.xml
@@ -24,8 +24,8 @@
         <java.version>1.8</java.version>
 
         <fastjson.version>1.2.46</fastjson.version>
-        <dubbo-starter.version>2.7.1</dubbo-starter.version>
-        <dubbo.version>2.7.1</dubbo.version>
+        <dubbo-starter.version>1.1.3</dubbo-starter.version>
+        <dubbo.version>2.6.7</dubbo.version>
         <zkclient.version>0.11</zkclient.version>
         <mybatis.version>2.1.0</mybatis.version>
         <nekohtml.version>1.9.20</nekohtml.version>
@@ -54,7 +54,8 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.6.7</version>
+                <version>${dubbo.version}</version>
+<!--                <version>2.6.7</version>-->
             </dependency>
             <!--dubbo的注册中心-->
             <dependency>
@@ -66,7 +67,8 @@
             <dependency>
                 <groupId>com.gitee.reger</groupId>
                 <artifactId>spring-boot-starter-dubbo</artifactId>
-                <version>1.1.3</version>
+                <version>${dubbo-starter.version}</version>
+<!--                <version>1.1.3</version>-->
             </dependency>
 
             <dependency>
